--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" href="calendar.png">
+    <link rel="icon" type="image/png" href="/calendar.png">
     <link rel="manifest" href="/manifest.json">
-    <link rel="stylesheet" href="converter.css">
+    <link rel="stylesheet" href="/converter.css">
     <title>CALENDAR</title>
-    <script src="converter.js"defer></script>
+    <script src="/converter.js"defer></script>
 
     <style>
         body {
