--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" href="calendar.png">
+    <link rel="icon" type="image/png" href="/calendar/calendar.png">
     <link rel="manifest" href="calendar/manifest.json">
     <link rel="stylesheet" href="/calendar/converter.css">
     <title>CALENDAR</title>
