--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="/calendar/calendar.png">
-    <link rel="manifest" href="calendar/manifest.json">
+    <link rel="manifest" href="/calendar/manifest.json">
     <link rel="stylesheet" href="/calendar/converter.css">
     <title>CALENDAR</title>
     <script src="/calendar/converter.js"defer></script>
