--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"/>
     <link rel="icon" type="image/png" href="calendar.png">
-    <link rel="manifest" href="/manifest.json">
-    <link rel="stylesheet" href="converter.css">
+    <link rel="manifest" href="/calendar/manifest.json">
+    <link rel="stylesheet" href="/calendar/converter.css">
+     <script src="/calendar/converter.js"defer></script>
     <title>CALENDAR</title>
     
 
@@ -331,6 +332,6 @@
         }
 
     </script>
-    <script src="converter.js"defer></script>
+   
 </body>
 </html>
